--- a/src/style/normalize.css
+++ b/src/style/normalize.css
@@ -25,6 +25,7 @@ html {
 body {
   margin: 0;
   color: #333;
+  font-size: .37rem;
 }
 
 /**
@@ -44,6 +45,13 @@ h1 {
   font-size: 2em;
   margin: 0;
   padding: 0;
+}
+
+ul,
+li {
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
 
 /* Grouping content
