feat: 移动端导航栏

--- a/src/style/variable.scss
+++ b/src/style/variable.scss
@@ -1,5 +1,6 @@
 $main-color: #409eff;
-$main-a-color: rgba(64, 160, 255, 0.4);
+// $main-a-color: rgba(64, 160, 255, 0.4);
+$main-color-1: #3f73a6;
 
 @mixin ellipsis {
   overflow: hidden;
