--- a/src/style/variable.scss
+++ b/src/style/variable.scss
@@ -2,6 +2,11 @@ $main-color: #409eff;
 // $main-a-color: rgba(64, 160, 255, 0.4);
 $main-color-1: #3f73a6;
 
+// 结构间距
+$pd-s: .43rem;
+$pd-m: .53rem;
+$pd-l: .64rem;
+
 @mixin ellipsis {
   overflow: hidden;
   text-overflow: ellipsis;
