--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -1,4 +1,12 @@
-.w {
-  width: 1200px;
-  margin: 0 auto;
+// pc端
+@media screen and (min-width: 751px) {
+  body {
+    min-width: 820px;
+  }
+
+  .w {
+    min-width: 820px;
+    max-width: 1180px;
+    margin: 0 auto;
+  }
 }
