--- a/src/style/variable.scss
+++ b/src/style/variable.scss
@@ -1,6 +1,6 @@
-$main-color: #409eff;
-// $main-a-color: rgba(64, 160, 255, 0.4);
-$main-color-1: #3f73a6;
+$main-color: #3f73a6;
+$main-color-1: #409eff;
+$main-color-2: rgba(64, 160, 255, 0.4);
 
 // 结构间距
 $pd-s: .43rem;
