--- a/src/style/normalize.css
+++ b/src/style/normalize.css
@@ -40,8 +40,10 @@ main {
  * `article` contexts in Chrome, Firefox, and Safari.
  */
 
-h1 {
-  font-size: 2em;
+h1,
+h2,
+h3,
+h4 {
   margin: 0;
   padding: 0;
 }
