feat: home页面form表单结构完成

--- a/src/style/iconfont/iconfont.css
+++ b/src/style/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4399917 */
-  src: url('iconfont.woff2?t=1705044746074') format('woff2'),
-       url('iconfont.woff?t=1705044746074') format('woff'),
-       url('iconfont.ttf?t=1705044746074') format('truetype');
+  src: url('iconfont.woff2?t=1705647874801') format('woff2'),
+       url('iconfont.woff?t=1705647874801') format('woff'),
+       url('iconfont.ttf?t=1705647874801') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,26 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-locationfill:before {
+  content: "\e650";
+}
+
+.icon-email:before {
+  content: "\e641";
+}
+
+.icon-phone1:before {
+  content: "\e618";
+}
+
+.icon-douhao:before {
+  content: "\e64e";
+}
+
+.icon-douhao-copy:before {
+  content: "\e64f";
 }
 
 .icon-more:before {
